--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,16 @@
 
   <groupId>org.dataaccessioner</groupId>
   <artifactId>dafixity</artifactId>
-  <version>1.0</version>
+  <version>1.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>dafixity</name>
-  <description>Checksum verifier for Files processed by Data Accessioner.</description>
-  <url>http://dataaccessioner.org/downloads/da-fixity</url>
+  <description>Checksum verifier for files processed by Data Accessioner.</description>
+  <url>https://github.com/digitalpowrr/dafixity</url>
+  <inceptionYear>2017</inceptionYear>
+  <organization>
+    <name>Digital POWRR</name>
+  </organization>
 
   <developers>
     <developer>
@@ -20,21 +24,16 @@
   </developers>
 
   <scm>
-    <url>https://github.com/sprater/dafixity</url>
-    <connection>scm:git:git://github.com/sprater/dafixity.git</connection>
-    <developerConnection>scm:git:git@github.com:sprater/dafixity.git</developerConnection>
+    <url>https://github.com/digitalpowrr/dafixity</url>
+    <connection>scm:git:git://github.com/digitalpowrr/dafixity.git</connection>
+    <developerConnection>scm:git:git@github.com:digitalpowrr/dafixity.git</developerConnection>
   </scm>
-  <distributionManagement>
-    <repository>
-      <id>dataaccessioner.org</id>
-      <name>Data Accessioner Maven Repository</name>
-    </repository>
-  </distributionManagement>
 
   <properties>
-    <java.version>1.8</java.version>
-    <maven.enforcer.plugin>1.2</maven.enforcer.plugin>
-    <maven.version.range>[2.2.1,3.1.0)</maven.version.range>
+    <java.version>11</java.version>
+    <java.target>11</java.target>
+    <maven.enforcer.plugin>3.3.0</maven.enforcer.plugin>
+    <maven.version.range>[3.9,)</maven.version.range>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <start-class>org.dataaccessioner.DAFixity</start-class>
   </properties>
@@ -50,32 +49,32 @@
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
-      <version>1.10</version>
+      <version>1.16.1</version>
     </dependency>
 
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
-      <version>1.3.1</version>
+      <version>1.6.0</version>
     </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.7.22</version>
+      <version>2.0.12</version>
     </dependency>
 
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.2.0</version>
+      <version>1.5.0</version>
     </dependency>
 
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
-      <version>7.7.0</version>
+      <version>7.9.0</version>
       <scope>test</scope>
     </dependency>
 
@@ -85,26 +84,28 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.0</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <version>3.12.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>11</source>
+          <target>11</target>
+          <release>11</release>
         </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <groupId>org.apache.maven.plugins</groupId>
-        <version>2.19.1</version>
+        <version>3.2.5</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>2.6</version>
+        <version>3.3.0</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>2.4.3</version>
+        <version>3.5.2</version>
         <executions>
           <!-- Run shade goal on package phase -->
           <execution>
@@ -125,6 +126,11 @@
                     <exclude>META-INF/*.SF</exclude>
                     <exclude>META-INF/*.DSA</exclude>
                     <exclude>META-INF/*.RSA</exclude>
+                    <exclude>META-INF/MANIFEST.MF</exclude>
+                    <exclude>META-INF/LICENSE.txt</exclude>
+                    <exclude>META-INF/NOTICE.txt</exclude>
+                    <exclude>module-info.class</exclude>
+                    <exclude>META-INF/versions/**</exclude>
                   </excludes>
                 </filter>
               </filters>
@@ -135,7 +141,7 @@
       <plugin>
         <groupId>com.akathist.maven.plugins.launch4j</groupId>
         <artifactId>launch4j-maven-plugin</artifactId>
-        <version>1.7.14</version>
+        <version>2.5.0</version>
         <executions>
           <execution>
             <id>l4j-clui</id>
@@ -145,7 +151,7 @@
             </goals>
             <configuration>
               <headerType>console</headerType>
-              <jar>${project.build.directory}/${artifactId}-${version}.jar</jar>
+              <jar>${project.build.directory}/${project.artifactId}-${project.version}.jar</jar>
               <outfile>${project.build.directory}/dafixity.exe</outfile>
               <downloadUrl>http://dataaccessioner.org/dafixity/</downloadUrl>
               <classPath>
@@ -153,16 +159,15 @@
                 <preCp>anything</preCp>
               </classPath>
               <jre>
-                <minVersion>1.8.0</minVersion>
-                <jdkPreference>preferJre</jdkPreference>
+                <minVersion>11</minVersion>
               </jre>
               <versionInfo>
-                <fileVersion>1.0.0.0</fileVersion>
-                <txtFileVersion>1.0.0.0</txtFileVersion>
+                <fileVersion>1.2.0.0</fileVersion>
+                <txtFileVersion>1.2.0.0</txtFileVersion>
                 <fileDescription>${project.name}</fileDescription>
-                <copyright>2017 Scott Prater</copyright>
-                <productVersion>1.0.0.0</productVersion>
-                <txtProductVersion>1.0.0.0</txtProductVersion>
+                <copyright>2024 Digital POWRR</copyright>
+                <productVersion>1.2.0.0</productVersion>
+                <txtProductVersion>1.2.0.0</txtProductVersion>
                 <productName>${project.name}</productName>
                 <companyName>dataaccessioner.org</companyName>
                 <internalName>dafixity</internalName>
@@ -174,7 +179,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.5.1</version>
+        <version>3.6.0</version>
         <configuration>
           <descriptors>
             <descriptor>src/assembly/assembly.xml</descriptor>
